<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo_main_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_main_small"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/firestore_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your account"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/create_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main_small" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_create_an_account_to_save_your_file"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firestore_text" />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_text"
        app:layout_constraint_Bottom_toTopOf="@id/emailEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@id/emailEditText"
        android:layout_width="367dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@id/passwordEditText"
        android:layout_width="367dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="367dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="40dp"
        android:hint="@string/Signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
